# revelation

./: ChangeLog  HACKING  NEWS  README  SConstruct  TODO  configure.ac  setup.py
data/: Makefile.am  SConscript
data/gconf/: revelation-applet.schemas  revelation.schemas
data/mime/: revelation.desktop.in
data/ui/: menubar.xml  popup-tree.xml  toolbar.xml
doc/: SConscript
doc/file-specification/: encryption.xml  file-specification.xml
doc/file-specification/images/: diagram-fileformat.pic
doc/file-specification/stylesheets/: file-specification.css  xhtml-chunks.xsl  xhtml-common.xsl  xhtml.xsl  xhtml.xsl.in
docs/: SConscript
docs/filespec/: accounttypes.xml  encryption.xml  intro.xml  xml.xml
docs/filespec/images/: diagram-encryption.pic
docs/filespec/stylesheets/: xhtml-chunks.xsl.in  xhtml-common.xsl
gnome/: revelation.desktop
po/: POTFILES.in  SConscript
src/: Makefile.am  SConscript  revelation  revelation-applet.in  revelation.in
src/lib/: __init__.py  account.py  config.py.in  data.py  dialog.py  entry.py  io.py  misc.py  stock.py  ui.py  util.py  widget.py
src/lib/datahandler/: __init__.py  base.py  fpm.py  gpass.py  netrc.py  rvl.py  xhtml.py
src/package/: __init__.py  account.py  config.py  config.py.in  dialog.py  error.py  info.py.in  stock.py  ui.py
src/wrap/crack/: crack.c.in
tests/: TestSuite.py  __init__.py  account.py  run  testutil.py
wrap/crack/: Makefile.am
